FreeST/test/Programs/InvalidTests/nonContractiveRecTypes/nonContractiveRecTypes.fst
type T = U

type U = V

type V = T

main : T
main = 'a'
